--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,56 +1,71 @@
 # Publications Data
 # Each entry should have: title, authors, venue, year, and optionally: doi, code, pdf, research
 
+2025.arxiv.aquas:
+  title: "Aquas: Enhancing Domain Specialization through Holistic Hardware-Software Co-Optimization based on MLIR"
+  authors: [Yuyang Zou, Youwei Xiao, Yansong Xu, Chenyun Yin, Yuhao Luo, Yitian Sun, Ruifan Xu, Renze Chen, Yun Liang]
+  venue: "arXiv"
+  year: 2025
+  doi: https://www.arxiv.org/abs/2511.22267
+  research: [hls,arch,hdl,compiler]
+
+2025.arxiv.skyegg:
+  title: "SkyEgg: Joint Implementation Selection and Scheduling for Hardware Synthesis using E-graphs"
+  authors: [Youwei Xiao, Yuyang Zou, Yun Liang]
+  venue: "arXiv"
+  year: 2025
+  doi: https://arxiv.org/abs/2511.15323
+  research: [hls]
+
+2025.arxiv.cmt2:
+  title: "Cement2: Temporal Hardware Transactions for High-Level and Efficient FPGA Programming"
+  authors: [Youwei Xiao, Zizhang Luo, Weijie Peng, Yuyang Zou, Yun Liang]
+  venue: "arXiv"
+  year: 2025
+  doi: https://arxiv.org/abs/2511.15073
+  research: [hdl]
+
 # Conference Papers
 2025.iccad.aps:
   title: "APS: Open-Source Hardware-Software Co-Design Framework for Agile Processor Specialization"
-  authors: [Youwei Xiao]  # Add author IDs from authors.yml
+  authors: [Youwei Xiao, Yuyang Zou, Yansong Xu, Yuhao Luo, Yitian Sun, Chenyun Yin, Ruifan Xu, Renze Chen, Yun Liang]  # Add author IDs from authors.yml
   venue: "ICCAD 2025"
   year: 2025
+  doi: https://ieeexplore.ieee.org/document/11240817
   note: "Invited Paper"
-  pdf: /assets/APS__ICCAD25_.pdf
   research: [hls, hdl, processor, compiler]
 
 # Tool Papers
 2024.fpga.popa:
-  title: "Performance-Oriented Polyhedral Analysis"
-  authors: []
+  title: "POPA: Expressing High and Portable Performance across Spatial and Vector Architectures for Tensor Computations"
+  authors: [Xiaochen Hao, Hongbo Rong, Mingzhe Zhang, Ce Sun, Hong Jiang, Yun Liang]
   venue: "FPGA 2024"
   year: 2024
   doi: https://dl.acm.org/doi/10.1145/3626202.3637566
   code: https://github.com/pku-liang/popa/tree/mlir
-  research: [hls]
-
-2023.fccm.popa:
-  title: "POPA: Performance-Oriented Polyhedral Analysis"
-  authors: []
-  venue: "FCCM 2023"
-  year: 2023
-  doi: https://ieeexplore.ieee.org/document/10171577
-  code: https://github.com/pku-liang/popa/tree/mlir
-  research: [hls]
+  research: [hls, arch]
 
 2022.iccad.hector:
   title: "Hector: Multi-Level Intermediate Representation for Hardware Synthesis"
-  authors: []
+  authors: [Ruifan Xu, Youwei Xiao, Jin Luo, Yun Liang]
   venue: "ICCAD 2022"
   year: 2022
   doi: https://ieeexplore.ieee.org/document/10068908
   code: https://github.com/pku-liang/Hector/tree/tutorial-aspdac
-  research: [hls, hdl]
+  research: [hls]
 
 2024.micro.hestia:
-  title: "Hestia: Hardware Synthesis Framework"
-  authors: []
+  title: "Hestia: An Efficient Cross-Level Debugger for High-Level Synthesis"
+  authors: [Ruifan Xu, Jin Luo, Yawen Zhang, Yibo Lin, Runsheng Wang, Ru Huang, Yun Liang]
   venue: "MICRO 2024"
   year: 2024
   doi: https://ieeexplore.ieee.org/abstract/document/10764625
   code: https://github.com/pku-liang/hestia/tree/main
-  research: [hls]
+  research: [hls, verification]
 
 2024.fpga.cement:
-  title: "Cement: Streamlining FPGA Hardware Design with Cycle-Deterministic EHDL"
-  authors: []
+  title: "Cement: Streamlining FPGA Hardware Design with Cycle-Deterministic eHDL and Synthesis"
+  authors: [Youwei Xiao, Zizhang Luo, Kexing Zhou, Yun Liang]
   venue: "FPGA 2024"
   year: 2024
   doi: https://dl.acm.org/doi/10.1145/3626202.3637561
@@ -58,19 +73,10 @@
   research: [hdl]
 
 2023.micro.khronos:
-  title: "Khronos: A RISC-V Simulator"
-  authors: []
+  title: "Khronos: Fusing Memory Access for Improved Hardware RTL Simulation"
+  authors: [Kexing Zhou, Yun Liang, Yibo Lin, Runsheng Wang, Ru Huang]
   venue: "MICRO 2023"
   year: 2023
   doi: https://dl.acm.org/doi/10.1145/3613424.3614301
   code: https://github.com/pku-liang/ksim/tree/aspdac24-tutorial
-  research: [processor]
-
-# Preprints
-2024.arxiv.aquas:
-  title: "AQUAS: Automated Quantization-Aware Synthesis"
-  authors: []
-  venue: "arXiv"
-  year: 2024
-  doi: https://www.arxiv.org/abs/2511.22267
-  research: [hls]
+  research: [verification]
