--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,19 +3,17 @@
 
 # Columns (the more you add, the narrower they will be)
 columns:
-  - description:
-    links:
-    - text: Name of project partner 1
-      href: http://example.com
-      new_window: true
-    - text: Prestigious and long name of project partner 2
-      href: http://example.com
-      new_window: true
+  # - description:
+  #   links:
+  #   - text: Name of project partner 1
+  #     href: http://example.com
+  #     new_window: true
+  #   - text: Prestigious and long name of project partner 2
+  #     href: http://example.com
+  #     new_window: true
 
   - description: > # E.g. funding acknowledgement. Can be Markdown
       This project is made with ❤ for open source.
-      See [`_data/footer.yml`](https://raw.githubusercontent.com/peterdesmet/petridish/master/_data/footer.yml)
-      to customize this text.
     links:
 
 # Small print license statement to add at the bottom of the footer. Can be Markdown
