--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -15,6 +15,14 @@ columns:
   - description: > # E.g. funding acknowledgement. Can be Markdown
       This project is made with ❤ for open source.
     links:
+  - description: > 
+      Seeking cooperation? Feel free to contact 
+    links:
+    - text: Prof. Yun Liang
+      href: mailto:ericlyun@pku.edu.cn
+    - text: Youwei Xiao
+      href: mailto:shallwe@pku.edu.cn
+
 
 # Small print license statement to add at the bottom of the footer. Can be Markdown
 # Will be prefixed by "© {{ site.author }}" if defined in _config.yml
