Add tutorial page template

--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -5,7 +5,8 @@ upcoming:
     website: https://www.aspdac.com/aspdac2026/program/program-abstract.html#T5
     date: 2026-01-19
     status: upcoming
-    details: "Coming soon"
+    details: "January 19, 2026 in Tokyo, Japan"
+    page: /tutorials/aspdac-2026/
 
 past:
 
