--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,5 +11,5 @@
 - text: Team
   href: /team/
 - text: GitHub
-  href: https://github.com/pku-liang/aps/
+  href: https://github.com/pku-liang/aps-mlir/
   new_window: true
